--- a/app/templates/workflow.html
+++ b/app/templates/workflow.html
@@ -12,7 +12,7 @@
         <div class="jumbotron">
             <div class="bg-light-gray">
                 <h3>Add step to workflow</h3>
-                <p>Add a step by passing it's URI. You can check the box to
+                <p>Add a step by passing its URI. You can check the box to
                    fetch the step RDF from a nanopub publication. Here are some
                    example nanopub fair steps:
                 </p>
