Remove reference to localhost

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
             <div class="bg-light-gray">
                 <h2>Create a new workflow</h2>
                 <p>
-                    <form action="http://localhost:5000/" method="post">
+                    <form action="" method="post">
                 <p>Description:</p>
                 <p><input type="text" name="workflow_description"/></p>
                 <p><input name='create_workflow' class="btn btn-sm btn-default" type="submit" value="Create workflow"/></p>
